@@ -17,10 +17,10 @@
 	<url>http://ianbrandt.com</url>
 
 	<modules>
-		<module>com.ianbrandt.m2e.mdp.core</module>
-		<module>com.ianbrandt.m2e.mdp.tests</module>
-		<module>com.ianbrandt.m2e.mdp.feature</module>
-		<module>com.ianbrandt.m2e.mdp.site</module>
+		<module>core</module>
+		<module>tests</module>
+		<module>feature</module>
+		<module>site</module>
 	</modules>
 
 	<licenses>
@@ -60,8 +60,6 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<tycho-version>0.15.0</tycho-version>
-		<test.timeout>600</test.timeout><!-- 10 mins -->
-		<tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
 	</properties>
 
 	<repositories>
@@ -105,6 +103,33 @@
 				<configuration>
 					<resolver>p2</resolver>
 					<ignoreTychoRepositories>true</ignoreTychoRepositories>
+					<environments>
+						<environment>
+							<os>linux</os>
+							<ws>gtk</ws>
+							<arch>x86</arch>
+						</environment>
+						<environment>
+							<os>linux</os>
+							<ws>gtk</ws>
+							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>win32</os>
+							<ws>win32</ws>
+							<arch>x86</arch>
+						</environment>
+						<environment>
+							<os>win32</os>
+							<ws>win32</ws>
+							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>macosx</os>
+							<ws>cocoa</ws>
+							<arch>x86_64</arch>
+						</environment>
+					</environments>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -130,62 +155,9 @@
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-surefire-plugin</artifactId>
 					<version>${tycho-version}</version>
-					<configuration>
-						<useUIHarness>true</useUIHarness>
-						<showEclipseLog>true</showEclipseLog>
-						<failIfNoTests>false</failIfNoTests>
-						<includes>
-							<include>**/*Test.java</include>
-						</includes>
-						<argLine>${tycho.test.jvmArgs}</argLine>
-						<appArgLine>-pluginCustomization ${basedir}/plugin_customization.ini</appArgLine>
-						<!-- kill test JVM it tests take more than ${test.timeout} seconds to finish -->
-						<forkedProcessTimeoutInSeconds>${test.timeout}</forkedProcessTimeoutInSeconds>
-					</configuration>
-				</plugin>
-
-				<!-- important for self-hosting -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>2.5</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
 
-	<profiles>
-		<profile>
-			<id>osx</id>
-			<activation>
-				<property>
-					<name>java.vendor.url</name>
-					<value>http://www.apple.com/</value>
-				</property>
-			</activation>
-			<properties>
-				<tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -XstartOnFirstThread</tycho.test.jvmArgs>
-			</properties>
-			<build>
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>org.eclipse.tycho</groupId>
-							<artifactId>tycho-surefire-plugin</artifactId>
-							<version>${tycho-version}</version>
-							<configuration>
-								<dependencies>
-									<dependency>
-										<artifactId>org.eclipse.jdt.launching.macosx</artifactId>
-										<version>3.2.100</version>
-										<type>eclipse-plugin</type>
-									</dependency>
-								</dependencies>
-							</configuration>
-						</plugin>
-					</plugins>
-				</pluginManagement>
-			</build>
-		</profile>
-	</profiles>
 </project>
